k8s/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archie-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: archie-app
