k8s/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archie-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "archie-staging-ip"
    networking.gke.io/managed-certificates: "archie-staging-ssl-cert"
spec:
  tls:
  - hosts:
    - staging.34.49.96.120.nip.io
  rules:
  - host: staging.34.49.96.120.nip.io
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: archie-service
            port:
              number: 80
